# rust-media-server

./: .gitignore  Cargo.toml
migrations/: V1__initial.sql
src/: application.rs  main.rs
src/clients/: public_ip.rs
src/db/: databasehandler.rs  errors.rs  mod.rs  tables.rs  videos_table.rs  watched_folders_table.rs
src/folder_watcher/: watcher.rs
src/gui/: page.rs
src/service/: mod.rs  webservice.rs
src/service/websocket/: mod.rs  signal_connection_maker.rs  socket_manager.rs
src/service/websocket/messaging/: answer_generator.rs  mod.rs  pinger_job.rs
src/webrtc/: webrtc.rs
src/websocket/: mod.rs  signal_connection.rs
src/websocket_blex/: mod.rs  signal_connection.rs  webs_signal_connection.rs
